// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/Flex Column Direction 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-yeoIj jdeFJT"
  >
    <div
      class="sc-gKXOVf QRSBg sc-iBkjds ipRjux sc-hHLeRK eTSHtc"
    >
      <div
        class="sc-gKXOVf QRSBg sc-iBkjds lhBAYZ"
        style="height: 200px; width: 200px;"
      />
      <div
        class="sc-gKXOVf QRSBg sc-iBkjds dUAJoU"
        style="height: 200px; width: 200px;"
      />
      <div
        class="sc-gKXOVf QRSBg sc-iBkjds fdnjSZ"
        style="height: 200px; width: 200px;"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Flex Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-yeoIj jdeFJT"
  >
    <div
      class="sc-gKXOVf QRSBg sc-iBkjds ipRjux sc-hHLeRK iKIurY"
    >
      <div
        class="sc-gKXOVf QRSBg sc-iBkjds lhBAYZ"
        style="height: 200px; width: 200px;"
      />
      <div
        class="sc-gKXOVf QRSBg sc-iBkjds dUAJoU"
        style="height: 200px; width: 200px;"
      />
      <div
        class="sc-gKXOVf QRSBg sc-iBkjds fdnjSZ"
        style="height: 200px; width: 200px;"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Flex Flex On Children 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-yeoIj jdeFJT"
  >
    <div
      class="sc-gKXOVf QRSBg sc-iBkjds ipRjux sc-hHLeRK cINHHz"
    >
      <div
        class="sc-gKXOVf QRSBg sc-iBkjds lhBAYZ"
        style="height: 200px; width: 200px;"
      />
      <div
        class="sc-gKXOVf QRSBg sc-iBkjds lhBAYZ"
        style="height: 200px; width: 200px;"
      />
      <div
        class="sc-gKXOVf ckXSHX sc-iBkjds lhBAYZ"
        style="height: 200px; width: 200px;"
      />
      <div
        class="sc-gKXOVf QRSBg sc-iBkjds dUAJoU"
        style="height: 200px; width: 200px;"
      />
      <div
        class="sc-gKXOVf QRSBg sc-iBkjds fdnjSZ"
        style="height: 200px; width: 200px;"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Flex Justified 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-yeoIj jdeFJT"
  >
    <div
      class="sc-gKXOVf QRSBg sc-iBkjds ipRjux sc-hHLeRK eccixI"
    >
      <div
        class="sc-gKXOVf QRSBg sc-iBkjds lhBAYZ"
        style="height: 200px; width: 200px;"
      />
      <div
        class="sc-gKXOVf QRSBg sc-iBkjds dUAJoU"
        style="height: 200px; width: 200px;"
      />
      <div
        class="sc-gKXOVf QRSBg sc-iBkjds fdnjSZ"
        style="height: 200px; width: 200px;"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Flex Wrap 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-yeoIj jdeFJT"
  >
    <div
      class="sc-gKXOVf QRSBg sc-iBkjds ipRjux sc-hHLeRK cINHHz"
    >
      <div
        class="sc-gKXOVf QRSBg sc-iBkjds lhBAYZ"
        style="height: 200px; width: 200px;"
      />
      <div
        class="sc-gKXOVf QRSBg sc-iBkjds lhBAYZ"
        style="height: 200px; width: 200px;"
      />
      <div
        class="sc-gKXOVf QRSBg sc-iBkjds dUAJoU"
        style="height: 200px; width: 200px;"
      />
      <div
        class="sc-gKXOVf QRSBg sc-iBkjds fdnjSZ"
        style="height: 200px; width: 200px;"
      />
      <div
        class="sc-gKXOVf QRSBg sc-iBkjds lhBAYZ"
        style="height: 200px; width: 200px;"
      />
      <div
        class="sc-gKXOVf QRSBg sc-iBkjds dUAJoU"
        style="height: 200px; width: 200px;"
      />
      <div
        class="sc-gKXOVf QRSBg sc-iBkjds fdnjSZ"
        style="height: 200px; width: 200px;"
      />
      <div
        class="sc-gKXOVf QRSBg sc-iBkjds lhBAYZ"
        style="height: 200px; width: 200px;"
      />
      <div
        class="sc-gKXOVf QRSBg sc-iBkjds dUAJoU"
        style="height: 200px; width: 200px;"
      />
      <div
        class="sc-gKXOVf QRSBg sc-iBkjds fdnjSZ"
        style="height: 200px; width: 200px;"
      />
    </div>
  </div>
</div>
`;
